--- a/.golangci.yml
+++ b/.golangci.yml
@@ -19,3 +19,8 @@ linters-settings:
   lll:
     line-length: 140
     tab-width: 4
+  tagliatelle:
+    case:
+      use-field-name: true
+      rules:
+        json: snake
